--- a/miniapp/CMakeLists.txt
+++ b/miniapp/CMakeLists.txt
@@ -9,4 +9,4 @@
 #
 
 add_executable(miniapp_cholesky miniapp_cholesky.cpp)
-target_link_libraries(miniapp_cholesky PRIVATE DLAF)
+target_link_libraries(miniapp_cholesky PRIVATE DLAF DLAF_test)
